--- a/package.json
+++ b/package.json
@@ -15,14 +15,16 @@
     "eslint": "^8.15.0",
     "jest": "^28.1.0",
     "jwt-decode": "^3.1.2",
-    "nodemon": "^2.0.16",
+    "nodemon": "^2.0.22",
     "supertest": "^6.2.3"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.1",
     "helmet": "^5.0.2",
+    "jsonwebtoken": "^9.0.2",
     "knex": "^2.0.0",
     "sqlite3": "^5.0.8"
   },
